--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -22,16 +22,23 @@
     background-position: center;
     position: absolute;
     width: 100%;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
+    transition: transform 1s ease-in-out;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .slider-item.active {
-    opacity: 1;
+    transform: translateX(0);
     z-index: 2;
+}
+
+.slider-item.prev {
+    transform: translateX(-100%);
+}
+
+.slider-item.next {
+    transform: translateX(100%);
 }
 
 .slider-heading {
