--- a/picplate-frontend/src/index.css
+++ b/picplate-frontend/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #FFF8E1; /* Light cream background color */
 }
 
 code {
