changed the color for 'login to' text and updated readme file

--- a/picplate-frontend/src/assets/styles/Login.css
+++ b/picplate-frontend/src/assets/styles/Login.css
@@ -36,7 +36,7 @@
 .hero-title {
     font-size: 3.5rem;
     font-weight: 700;
-    color: #333; /* Dark text for better visibility on light background */
+    color: #ed6905; /* Dark text for better visibility on light background */
 }
 
 .hero-title span {
